# str8

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
example/: edgeCaseGeoJson.json  geojson.html  index.html  offset.html  pathfind.html  pathfind.js  polygons.json  region.html  roof.html
scripts/: build-wasm.sh
src/: index.ts
src/core/: CMakeLists.txt  skeleton.cpp  skeleton.d.ts  skeleton.js
test/: skeleton.test.js
